<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2014 Amazon.com, Inc. or its affiliates. -->
<!-- All Rights Reserved. -->
<resources>

    <string name="app_name">Fire Phone Demo</string>
    <string name="head_tracking">Head Tracking</string>
    <string name="title_activity_gesture">GestureActivity</string>
    <string name="title_home_widgets">Home Widgets</string>

    <!-- Navigation Bar Assets -->
    <string name="zheadernavbar_cart">cart_icon::cart_icon.scene</string>
    <string name="zheadernavbar_search">search_icon::search_icon.scene</string>

    <!-- Main Activity menus -->
    <string name="menu_cart">Cart</string>
    <string name="menu_search">Search</string>

    <!-- Gestures -->
    <string name="title_activity_side_panels">SidePanelsActivity</string>
    <string name="content_panel">Content Panel</string>
    <string name="right_side_panel">Right Panel</string>
    <string name="nav_header">Navigation Header</string>
    <string name="nav_1">Nav Item 1</string>
    <string name="nav_2">Nav Item 2</string>
    <string name="nav_3">Nav Item 3</string>
    <string name="nav_4">Nav Item 4</string>
    <string name="nav_5">Nav Item 5</string>
    <string name="nav_subheader">Subgroup</string>
    <string name="group1_item1">Group 1 Item 1</string>
    <string name="group1_item2">Group 1 Item 2</string>
    <string name="group1_item3">Group 1 Item 3</string>
    <string name="group1_item4">Group 1 Item 4</string>
    <string name="group1_item5">Group 1 Item 5</string>
    <string name="gesture_sensors">Gesture Sensors</string>

    <!-- Home Widget -->
    <string name="no_intent_data">No Intent Data</string>
    <string name="tag_subsample_groupedgridwidget">Create GroupedGridHeroWidget</string>
    <string name="tag_subsample_empty_groupedgridwidget">Empty GroupedGridHeroWidget</string>
    <string name="tag_subsample_grouped_list_widget">Create GroupedListHeroWidget</string>
    <string name="tag_subsample_empty_grouped_list_widget">Empty GroupedListHeroWidget</string>

    <string name="tag_subsample_incrementbadge">Increment Badge Number</string>
    <string name="tag_subsample_decrementbadge">Decrement Badge Number</string>

    <!-- Grouped grid template -->
    <string name="group_empty_grid">Empty Grid</string>
    <string name="group_empty_list">Empty List</string>
    <string name="group_empty_label">Empty Label</string>
    <string name="group_group">Group</string>
    <string name="group_group_with_icon">Group with icon URIs</string>
    <string name="group_item_in_group">Item %1$d in %2$s</string>
    <string name="grouped_grid_play_duration">23:45</string>
    <string name="title_activity_numeric_badge">Numeric Badges</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recommendations">Recommendations</string>
    <string name="product_label">Buy From Zappos!</string>
    <string name="phone_label">Call Zappos!</string>
    <string name="phonenumber">phone number</string>
    <string name="intended_usage">intended usage</string>
    <string name="description">description</string>
    <string name="fidelity">Fidelity:</string>
    <string name="hi">Hi</string>
    <string name="lo">Lo</string>

</resources>
