<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="com.zappos.firephone.activity.HomeWidgetActivity">
    <Button
        android:id="@+id/btn_set_groupedgridwidget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_subsample_groupedgridwidget"/>

    <Button
        android:id="@+id/btn_set_empty_groupedgridwidget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_subsample_empty_groupedgridwidget" />

    <Button
        android:id="@+id/btn_set_grouped_list_widget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_subsample_grouped_list_widget"/>

    <Button
        android:id="@+id/btn_set_empty_grouped_list_widget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_subsample_empty_grouped_list_widget" />
</LinearLayout>